# Kognit

./: .env.example  .gitignore  README.md  entry.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: pomilon_humor.html  pomilon_review.html  pomilon_roast.html
kognit/: main.py
kognit/agent/: explorer.py
kognit/models/: analysis.py  identity.py
kognit/probes/: github.py  normalizer.py  search.py  web.py
kognit/refinery/: engine.py  validator.py
kognit/renderer/: engine.py  manifest.py
kognit/renderer/templates/: biography.html
tests/: mock_github_payload.json  test_components.py
