[project]
name = "kognit"
version = "0.1.0"
description = "A technical biographer agent that transforms multi-source raw data into a validated DeveloperIdentity."
authors = [
    { name = "Pomilon", email = "pomilon@proton.me" }
]
dependencies = [
    "pydantic-ai",
    "litellm",
    "pydantic>=2.0",
    "python-dotenv",
    "httpx",
    "pyyaml",
    "jinja2",
    "rich"
]
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
